Naslovna, Branding i Registracija

--- a/src/leaderboard.tpl.html
+++ b/src/leaderboard.tpl.html
@@ -17,6 +17,7 @@
 				<h1>Tko želi biti NEOSovac?</h1>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum quibusdam, eum saepe veniam ducimus cumque velit voluptate error neque excepturi?</p>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, vel!</p>
+				<a href="#" class="btn btn-default">Leaderboard</a>
 			</div>
 			<!-- /.intro -->
 		</section>
