--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -4,36 +4,42 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	<div class="progress">
+	<div class="progress progress-hurryup">
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 			<span class="sr-only">60% Complete</span>
 		</div>
 	</div>
 	<!-- /.progress -->
 
-	<div class="content">
+	<div class="content quiz">
 
 		<section class="section-ladder">
+
+			<div class="logo">
+				<img src="assets/images/tzbn-logo.svg" alt="Tko želi biti NEOSovac?">
+			</div>
+			<!-- /.logo -->
+
 			<ul class="list-position list-unstyled">
 				<li class="active">
 					<span class="steps">
 						<span class="number">1</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
 				<li>
 					<span class="steps">
 						<span class="number">2</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
 				<li>
 					<span class="steps">
 						<span class="number">3</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-times-circle"></i>
 					</span>
 				</li>
 				<li>
@@ -121,22 +127,35 @@
 					</span>
 				</li>
 			</ul>
+
 		</section>
 		<!-- /.section-ladder -->
 
 		<section class="section-qa">
 			<section class="q">
-				<span class="step-counter">Korak 1/15</span>
+
+				<span class="step-counter">Korak 1 / 15</span>
 				<h1 class="question-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus autem necessitatibus, eos corrupti doloremque rem! Voluptate sunt modi nostrum?</h1>
+				<pre>
+<code class="java">public class Main { 
+  public static void main(String[] args) { 
+    System.out.<kbd>__________</kbd>("Želim biti NEOSovac!"); 
+  }
+}</code></pre>
+
 			</section>
 			<!-- /.q -->
 			<section class="a">
+
+				<span class="a-title">Odgovori:</span>
+
 				<ul class="list-answers list-unstyled">
 					<li><a href="#" class="btn btn-default btn-a">Odgovor koji u svakom slučaju može biti malo dužililili</a></li>
 					<li class="answer-correct"><a href="#" class="btn btn-default btn-b">Kratki odgovor</a></li>
 					<li class="answer-incorrect"><a href="#" class="btn btn-default btn-c">Još krać</a></li>
 					<li><a href="#" class="btn btn-default btn-d">Neutralne dužine</a></li>
 				</ul>
+
 			</section>
 			<!-- /.a -->
 		</section>
