Styles, Answers, Modal, Index and Firefox bugfix

--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -16,7 +16,7 @@
 		<section class="section-ladder">
 
 			<div class="logo">
-				<img src="assets/images/tzbn-logo.svg" alt="Tko želi biti NEOSovac?">
+				<a href="/"><img src="assets/images/tzbn-logo.svg" alt="Tko želi biti NEOSovac?"></a>
 			</div>
 			<!-- /.logo -->
 
@@ -139,7 +139,7 @@
 				<pre>
 <code class="java">public class Main { 
   public static void main(String[] args) { 
-    System.out.<kbd>__________</kbd>("Želim biti NEOSovac!"); 
+    System.out.<kbd>__________</kbd>("Želim biti NEOSovac!");
   }
 }</code></pre>
 
@@ -150,10 +150,10 @@
 				<span class="a-title">Odgovori:</span>
 
 				<ul class="list-answers list-unstyled">
-					<li><a href="#" class="btn btn-default btn-a">Odgovor koji u svakom slučaju može biti malo dužililili</a></li>
-					<li class="answer-correct"><a href="#" class="btn btn-default btn-b">Kratki odgovor</a></li>
-					<li class="answer-incorrect"><a href="#" class="btn btn-default btn-c">Još krać</a></li>
-					<li><a href="#" class="btn btn-default btn-d">Neutralne dužine</a></li>
+					<li class="answer"><a href="#" class="btn btn-default btn-a">Odgovor koji u svakom slučaju može biti malo dužililili</a></li>
+					<li class="answer answer-correct"><a href="#" class="btn btn-default btn-b">Kratki odgovor</a></li>
+					<li class="answer answer-incorrect"><a href="#" class="btn btn-default btn-c">Još krać</a></li>
+					<li class="answer answer-correct answer-was-correct"><a href="#" class="btn btn-default btn-d">Neutralne dužine</a></li>
 				</ul>
 
 			</section>
