--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -9,30 +9,49 @@
 		<section class="section-intro">
 			<div class="branding">
 				<div class="logo">
-					<img src="assets/images/tzbn-logo.svg" alt="Tko želi biti NEOSovac?">
+					<a href="/"><img src="assets/images/tzbn-logo.svg" alt="Tko želi biti NEOSovac?"></a>
 				</div>
 			</div>
 			<!-- /.branding -->
 			<div class="intro text-center">
-				<h1>Tko želi biti NEOSovac?</h1>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum quibusdam, eum saepe veniam ducimus cumque velit voluptate error neque excepturi?</p>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, vel!</p>
+				<h1>Ti si update kojeg tražimo!</h1>
+				<p class="lead">Pokaži nam u <strong>5:00 minuta</strong> svoje znanje i tko si te osvoji vrijedne nagrade!</p>
+				<p class="lead">Odgovori na nekoliko pitanja i riješi par zadataka Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, eos.</p>
+				<ul class="intro-boxes list-unstyled">
+					<li>
+						<i class="icon fa fa-gift"></i>
+						<p>Osvoji nagrade</p>
+
+					</li>
+					<li>
+						<i class="icon fa fa-id-card-o"></i>
+						<p>Upoznaj nas</p>
+
+					</li>
+					<li>
+						<i class="icon fa fa-handshake-o"></i>
+						<p>Šansa za posao</p>
+					</li>
+				</ul>
 			</div>
 			<!-- /.intro -->
 		</section>
 		<!-- /.section-intro -->
 
 		<section class="section-start">
-			<h3>Registriraj se i kreni!</h3>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet reprehenderit, laudantium officia ipsa quasi dolores ad, quia soluta voluptatum est.</p>
+			<heading class="section-heading">
+				<h3 class="section-title">Registriraj se i kreni!</h3>
+				<p>Tvoje podatke koristimo samo u svrhu igranja nagradne igre, podatke koje ostaviš ne prikazujemo javno.</p>				
+			</heading>
+			<!-- /.section-heading -->
 			<form action="#">
 				<div class="form-group">
-					<label for="tzbnUsername">Username:</label>
+					<label for="tzbnUsername">Odaberi username:</label>
 					<input type="text" class="form-control input-lg" id="tzbnUsername" autofocus>
 				</div>
 				<!-- /.form-group -->
 				<div class="form-group">
-					<label for="tzbnFERMail">FER e-mail:</label>
+					<label for="tzbnFERMail">Mejl s faksa:</label>
 					<input type="email" class="form-control input-lg" id="tzbnFERMail" required>
 				</div>
 				<!-- /.form-group -->
