--- a/src/modules/modal/modal.html
+++ b/src/modules/modal/modal.html
@@ -2,19 +2,20 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 				<h2 class="modal-title text-center">Čestitamo!</h2>
 			</div>
 			<!-- /.modal-header -->
 			<div class="modal-body text-center">
 				<p class="lead">Osvojili ste</p>
-				<h2>Frišku Figu</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione eum beatae pariatur accusamus itaque magnam vero. Ea dolores, fugiat maxime.</p>
+				<h2 class="reward">Frišku Figu</h2>
+				<p class="lead">Obavijesti djelatnika NEOSa o preuzimanju <br>svoje nagrade.</p>
+				<p class="lead">Naravno, zaigrati možeš opet, no bilo bi <strong>"JobFair"</strong> prepustiti nekom drugom ako čeka u redu. <i class="icon fa fa-smile-o"></i></p>
+				<p class="lead">Okušati možeš svoje znanje ponovno s drugim pitanjima za nešto manje od</p>
+				<h3 class="countdown">5:00 minuta</h3>
 			</div>
 			<!-- /.modal-body -->
 			<div class="modal-footer text-center">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<a href="/" type="button" class="btn btn-primary btn-lg">Povratak na početnu stranicu</a>
 			</div>
 			<!-- /.modal-footer -->
 		</div>
