Answers radio buttons

--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -149,11 +149,34 @@
 
 				<span class="a-title">Odgovori:</span>
 
-				<ul class="list-answers list-unstyled">
+				<!-- <ul class="list-answers list-unstyled">
 					<li class="answer"><a href="#" class="btn btn-default btn-a">Odgovor koji u svakom slučaju može biti malo dužililili</a></li>
 					<li class="answer answer-correct"><a href="#" class="btn btn-default btn-b">Kratki odgovor</a></li>
 					<li class="answer answer-incorrect"><a href="#" class="btn btn-default btn-c">Još krać</a></li>
 					<li class="answer answer-correct answer-was-correct"><a href="#" class="btn btn-default btn-d">Neutralne dužine</a></li>
+				</ul> -->
+
+				<ul class="list-answers list-unstyled">
+					<li class="answer">
+						<label for="answer1" class="btn btn-default btn-a">
+							<input type="radio" id="answer1"> Odgovor A
+						</label>
+					</li>
+					<li class="answer answer-correct">
+						<label for="answer2" class="btn btn-default btn-b">
+							<input type="radio" id="answer2"> Odgovor B
+						</label>
+					</li>
+					<li class="answer answer-incorrect">
+						<label for="answer3" class="btn btn-default btn-c">
+							<input type="radio" id="answer3"> Odgovor C
+						</label>
+					</li>
+					<li class="answer">
+						<label for="answer4" class="btn btn-default btn-d">
+							<input type="radio" id="answer4"> Odgovor D
+						</label>
+					</li>
 				</ul>
 
 			</section>
