Prismjs, Zadaci and Leaderboard scroll

--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -136,12 +136,51 @@
 
 				<span class="step-counter">Korak 1 / 15</span>
 				<h1 class="question-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus autem necessitatibus, eos corrupti doloremque rem! Voluptate sunt modi nostrum?</h1>
-				<pre>
-<code class="java">public class Main { 
+
+<pre id="qid5">
+<code class="language-javascript">var a = "2"; 
+console.log(a + a);</code>
+</pre>
+
+<pre id="qid8">
+<code class="language-sql">SELECT TO_CHAR (SYSDATE, 'MM-DD-YYYY HH24:MI:SS') "NOW" FROM DUAL;</code>
+</pre>
+
+<pre id="qid1008">
+<code class="language-javascript">let list = [
+	{ ime: 'Dodo', dob: 13 }, 
+	{ ime: 'Pepo', dob: 24 }
+];
+
+console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
+</pre>
+
+<pre id="qid1013">
+<code class="language-java">public class Main { 
   public static void main(String[] args) { 
     System.out.<kbd>__________</kbd>("Želim biti NEOSovac!");
   }
-}</code></pre>
+}</code>
+</pre>
+
+<pre id="qid1026">
+<code class="language-javascript">let list = [
+	{ ime: 'Dodo', dob: 13 }, 
+	{ ime: 'Pepo', dob: 24 }
+];
+
+console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
+</pre>
+
+<pre id="qid1041">
+<code class="language-javascript">let list = [
+	{ ime: 'Dodo', dob: 13 }, 
+	{ ime: 'Pepo', dob: 24 }
+];
+
+console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
+</pre>
+
 
 			</section>
 			<!-- /.q -->
