--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -197,24 +197,27 @@ console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
 
 				<ul class="list-answers list-unstyled">
 					<li class="answer">
-						<label for="answer1" class="btn btn-default btn-a">
+						<label for="answer1" class="btn btn-default">
 							<input type="radio" id="answer1"> Odgovor A
 						</label>
 					</li>
 					<li class="answer answer-correct">
-						<label for="answer2" class="btn btn-default btn-b">
+						<label for="answer2" class="btn btn-default">
 							<input type="radio" id="answer2"> Odgovor B
 						</label>
 					</li>
 					<li class="answer answer-incorrect">
-						<label for="answer3" class="btn btn-default btn-c">
+						<label for="answer3" class="btn btn-default">
 							<input type="radio" id="answer3"> Odgovor C
 						</label>
 					</li>
-					<li class="answer answer-correct answer-was-correct">
-						<label for="answer4" class="btn btn-default btn-d">
+					<li class="answer">
+						<label for="answer4" class="btn btn-default">
 							<input type="radio" id="answer4"> Odgovor D
 						</label>
+					</li>
+					<li class="answer submit">
+						<button class="btn btn-default">Sljedeće</button>
 					</li>
 				</ul>
 
