Final touches and simple validation

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -26,8 +26,8 @@
 			<!-- /.branding -->
 			<div class="intro text-center">
 				<h1>Ti si update kojeg tražimo!</h1>
-				<p class="lead">Pokaži nam u <strong>5:00 minuta</strong> svoje znanje i tko si te osvoji vrijedne nagrade!</p>
-				<p class="lead">Samo odgovori na nekoliko pitanja i riješi par zadataka</p>
+				<p class="lead">Pokaži nam u <strong>5:00 minuta</strong> svoje znanje te osvoji vrijedne nagrade!</p>
+				<p class="lead">Imaš 30 sekundi po pitanju, odgovori na nekoliko njih i riješi par zadataka</p>
 				<ul class="intro-boxes list-unstyled">
 					<li>
 						<i class="icon fa fa-gift"></i>
@@ -53,7 +53,7 @@
 
 			<!-- Tab panes -->
 			<div class="tab-content">
-				<section class="section-start tab-pane " role="tabpanel" id="start">
+				<section class="section-start tab-pane active" role="tabpanel" id="start">
 					<heading class="section-heading">
 						<h3 class="section-title">Registriraj se i kreni!</h3>
 						<p>Tvoje podatke koristimo samo u svrhu igranja nagradne igre, podatke koje ostaviš ne prikazujemo javno.</p>				
@@ -80,7 +80,7 @@
 				</section>
 				<!-- /.section-start -->
 
-				<section class="section-leaderboard tab-pane active" role="tabpanel" id="leaderboard">
+				<section class="section-leaderboard tab-pane" role="tabpanel" id="leaderboard">
 
 					<ul class="leaderboard list-unstyled">
 						<li class="sticky">
@@ -709,8 +709,8 @@
 
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" class=""><a href="#start" aria-controls="home" role="tab" data-toggle="tab">Start</a></li>
-				<li role="presentation" class="active"><a href="#leaderboard" aria-controls="profile" role="tab" data-toggle="tab">Leaderboard</a></li>
+				<li role="presentation" class="active"><a href="#start" aria-controls="home" role="tab" data-toggle="tab">Start</a></li>
+				<li role="presentation" class=""><a href="#leaderboard" aria-controls="profile" role="tab" data-toggle="tab">Leaderboard</a></li>
 			</ul>			
 
 			
