--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -21,7 +21,7 @@
 			<!-- /.logo -->
 
 			<ul class="list-position list-unstyled">
-				<li class="active">
+				<li>
 					<span class="steps">
 						<span class="number">1</span> 
 						<span class="step">Pitanje</span>
@@ -35,7 +35,7 @@
 						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">3</span> 
 						<span class="step">Pitanje</span>
@@ -137,16 +137,16 @@
 				<span class="step-counter">Korak 1 / 15</span>
 				<h1 class="question-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus autem necessitatibus, eos corrupti doloremque rem! Voluptate sunt modi nostrum?</h1>
 
-<pre id="qid5">
+<pre id="qid5" class="hidden">
 <code class="language-javascript">var a = "2"; 
 console.log(a + a);</code>
 </pre>
 
-<pre id="qid8">
+<pre id="qid8" class="hidden">
 <code class="language-sql">SELECT TO_CHAR (SYSDATE, 'MM-DD-YYYY HH24:MI:SS') "NOW" FROM DUAL;</code>
 </pre>
 
-<pre id="qid1008">
+<pre id="qid1008" class="hidden">
 <code class="language-javascript">let list = [
 	{ ime: 'Dodo', dob: 13 }, 
 	{ ime: 'Pepo', dob: 24 }
@@ -155,7 +155,7 @@ console.log(a + a);</code>
 console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
 </pre>
 
-<pre id="qid1013">
+<pre id="qid1013" class="hidden">
 <code class="language-java">public class Main { 
   public static void main(String[] args) { 
     System.out.<kbd>__________</kbd>("Želim biti NEOSovac!");
@@ -163,7 +163,7 @@ console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
 }</code>
 </pre>
 
-<pre id="qid1026">
+<pre id="qid1026" class="hidden">
 <code class="language-javascript">let list = [
 	{ ime: 'Dodo', dob: 13 }, 
 	{ ime: 'Pepo', dob: 24 }
@@ -196,27 +196,27 @@ console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
 				</ul> -->
 
 				<ul class="list-answers list-unstyled">
-					<li class="answer">
+					<li class="">
 						<label for="answer1" class="btn btn-default">
 							<input type="radio" id="answer1"> Odgovor A
 						</label>
 					</li>
-					<li class="answer answer-correct">
+					<li class="">
 						<label for="answer2" class="btn btn-default">
 							<input type="radio" id="answer2"> Odgovor B
 						</label>
 					</li>
-					<li class="answer answer-incorrect">
+					<li class="">
 						<label for="answer3" class="btn btn-default">
 							<input type="radio" id="answer3"> Odgovor C
 						</label>
 					</li>
-					<li class="answer">
+					<li class="">
 						<label for="answer4" class="btn btn-default">
 							<input type="radio" id="answer4"> Odgovor D
 						</label>
 					</li>
-					<li class="answer submit">
+					<li class="submit">
 						<button class="btn btn-default">Sljedeće</button>
 					</li>
 				</ul>
