Highlight leaderboard, Countdown animation colors and Question progress

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -113,9 +113,9 @@
 							<h4 class="user-name">Username</h4>
 							<span class="user-pts">233</span>
 						</li>
-						<li>
+						<li id="123" class="myposition">
 							<span class="user-position"></span>
-							<h4 class="user-name">Username</h4>
+							<h4 class="user-name">Username 123</h4>
 							<span class="user-pts">233</span>
 						</li>
 						<li>
