--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -4,7 +4,7 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	<div class="progress progress-hurryup"  id="progressBar">
+	<div class="progress progress-lastchance"  id="progressBar">
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 			<span class="sr-only">60% Complete</span>
 		</div>
@@ -21,14 +21,14 @@
 			<!-- /.logo -->
 
 			<ul class="list-position list-unstyled">
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">1</span> 
 						<span class="step">Pitanje</span>
 						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">2</span> 
 						<span class="step">Pitanje</span>
