--- a/src/modules/modal/modal.html
+++ b/src/modules/modal/modal.html
@@ -8,6 +8,12 @@
 			<div class="modal-body text-center">
 				<p class="lead">Osvojili ste</p>
 				<h2 class="reward">Frišku Figu</h2>
+				<h2 class="reward">Frišku Figu</h2>
+				<h2 class="reward">Frišku Figu</h2>
+				<p class="lead">Tvoje prolazno vrijeme je: <strong>3:37</strong></p>
+
+				<hr>
+				
 				<p class="lead">Obavijesti djelatnika NEOSa o preuzimanju <br>svoje nagrade.</p>
 				<p class="lead">Naravno, zaigrati možeš opet, no bilo bi <strong>"JobFair"</strong> prepustiti nekom drugom ako čeka u redu. <i class="icon fa fa-smile-o"></i></p>
 				<!-- <p class="lead">Okušati možeš svoje znanje ponovno s drugim pitanjima za nešto manje od</p> -->
@@ -15,7 +21,7 @@
 			</div>
 			<!-- /.modal-body -->
 			<div class="modal-footer text-center">
-				<a href="/" type="button" class="btn btn-primary btn-lg">Povratak na početnu stranicu</a>
+				<a href="/" type="button" class="btn btn-primary btn-lg">Povratak na Leaderboard</a>
 			</div>
 			<!-- /.modal-footer -->
 		</div>
