--- a/src/tzbn.tpl.html
+++ b/src/tzbn.tpl.html
@@ -4,7 +4,7 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	<div class="progress progress-lastchance"  id="progressBar">
+	<div class="progress progress-"  id="progressBar">
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 			<span class="sr-only">60% Complete</span>
 		</div>
@@ -39,91 +39,91 @@
 					<span class="steps">
 						<span class="number">3</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-times-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">4</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li class="reward">
+				<li class="reward active">
 					<span class="steps">
 						<span class="number">5</span> 
 						<span class="step">ZADATAK</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">6</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">7</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">8</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">9</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li class="reward">
+				<li class="reward active">
 					<span class="steps">
 						<span class="number">10</span> 
 						<span class="step">ZADATAK</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">11</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">12</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">13</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li>
+				<li class="active">
 					<span class="steps">
 						<span class="number">14</span> 
 						<span class="step">Pitanje</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
-				<li class="reward">
+				<li class="reward active">
 					<span class="steps">
 						<span class="number">15</span> 
 						<span class="step">ZADATAK</span>
-						<i class="icon fa fa-circle"></i>
+						<i class="icon fa fa-check-circle"></i>
 					</span>
 				</li>
 			</ul>
@@ -135,7 +135,7 @@
 			<section class="q">
 
 				<span class="step-counter">Korak 1 / 15</span>
-				<h1 class="question-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus autem necessitatibus, eos corrupti doloremque rem! Voluptate sunt modi nostrum?</h1>
+				<h1 class="question-title">Koje je po tvom mišljenju rješenje na sljedeći zadatak?</h1>
 
 <pre id="qid5" class="hidden">
 <code class="language-javascript">var a = "2"; 
@@ -201,7 +201,7 @@ console.log( list.filter( it => it.dob > 18 ).map( it => it.ime ) );</code>
 							<input type="radio" id="answer1"> Odgovor A
 						</label>
 					</li>
-					<li class="">
+					<li class="answer user-choice answer-correct">
 						<label for="answer2" class="btn btn-default">
 							<input type="radio" id="answer2"> Odgovor B
 						</label>
