Relative sizing, Autoplay and bugfixes

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -123,7 +123,7 @@
 							<h4 class="user-name">Username</h4>
 							<span class="user-pts">233</span>
 						</li>
-						<li id="123" class="myposition">
+						<li id="123" class="active">
 							<span class="user-position"></span>
 							<h4 class="user-name">Username 123</h4>
 							<span class="user-pts">233</span>
